updating the entire system

--- a/views/all-admin-properties.ejs
+++ b/views/all-admin-properties.ejs
@@ -6,9 +6,9 @@
 <%- include('include/_hero') %>
 <!-- /include hero -->
 
-<!-- include all-properties -->
-<%- include('include/_all-properties') %>
-<!-- /include all-properties -->
+<!-- include _all-admin-properties -->
+<%- include('include/_all-admin-properties') %>
+<!-- /include _all-admin-properties -->
 
 <!-- include cta -->
 <%- include('include/_cta') %>
