--- a/views/apply.ejs
+++ b/views/apply.ejs
@@ -3,7 +3,7 @@
 <!-- /include header -->
 
 <!-- include application-->
-<%- include('include/_apply') %>
+<%- include('include/_apply', { aid: aid, location: location }) %>
 <!-- /include application-->
 
 <!-- include cta -->
