--- a/views/include/_edit-user.ejs
+++ b/views/include/_edit-user.ejs
@@ -202,7 +202,7 @@
       
 
 
-      <div class="formbold-form-file-flex">
+      <!-- <div class="formbold-form-file-flex">
         <label for="apartmentsPhoto" class="formbold-form-label">
           Upload Property Image
         </label>
@@ -212,7 +212,7 @@
           id="apartmentsPhoto"
           class="formbold-form-file"
         />
-      </div>
+      </div> -->
 
       <button class="formbold-btn">Update User Account</button>
     </form>
