--- a/views/include/_header.ejs
+++ b/views/include/_header.ejs
@@ -120,9 +120,14 @@
     <div class="header-bottom">
       <div class="container">
 
-        <a href="#" class="logo">
-          <img src="./images/logo.png" alt="Homeverse logo">
+        <!-- <a href="/home" class="logo">
+          <img style="width: 50%;" src="./images/hub.jpg" alt="Homeverse logo">
+        </a> -->
+
+        <a href="/home" class="logo">
+          <img style="width: 50%; float: left; margin-right: 10px;" src="./images/hub.jpg" alt="Homeverse logo">
         </a>
+        
 
         <nav class="navbar" data-navbar>
 
