--- a/views/include/_verify-apartment.ejs
+++ b/views/include/_verify-apartment.ejs
@@ -100,7 +100,7 @@
                 <td class="hover"><%= apartment.createdBy %></td>
                 <td class="hover"><%= apartment.phone %></td>
                 <td class="hover"><%= apartment.location %></td>
-                <td class="hover <%= apartment.verification === 'verified' ? 'status-green-bg' : (apartment.verification === 'not-verified' ? 'status-red-bg' : '') %>"><%= apartment.verification %></td>
+                <td class="hover <%= apartment.verification === 'verified' ? 'status-green-bg' : (apartment.verification === 'not verified' ? 'status-red-bg' : '') %>"><%= apartment.verification %></td>
                
                 <td class="hover px-6 py-4 whitespace-nowrap">
                     <!-- Add icons with links to your delete, view, and update routes -->
