--- a/views/success/admin-apt.ejs
+++ b/views/success/admin-apt.ejs
@@ -58,13 +58,15 @@
             <p>Your apartment details have been successfully created.</p>
         </div>
         <div class="add-another-reception">
-            <a href="#" onclick="goBack()">Go Back</a>
+            <!-- <a href="#" onclick="goBack()">Go Back</a> -->
+            <a href="admin-home">Go Back</a>
+
         </div>
     </div>
 </body>
 <script>
-    function goBack() {
-        window.history.back();
-    }
-</script>
+//     function goBack() {
+//         window.history.back();
+//     }
+// </script>
 </html>
