--- a/views/success/delete-application.ejs
+++ b/views/success/delete-application.ejs
@@ -54,7 +54,7 @@
 <body>
     <div class="container">
         <div class="success-message">
-            <h1>Application Delelted Successfully!</h1>
+            <h1>Application Deleted Successfully!</h1>
             <p>Application details have been deleted successfully.</p>
         </div>
         <div class="add-another-reception">
