--- a/views/all-apartments.ejs
+++ b/views/all-apartments.ejs
@@ -1,3 +1,3 @@
-<!-- include all-users -->
+<!-- include all-apartments -->
 <%- include('include/_all-apartments') %>
-<!-- /include all-users -->
+<!-- /include all-apartments -->
