--- a/views/include/_all-application.ejs
+++ b/views/include/_all-application.ejs
@@ -90,6 +90,7 @@
                 <th>Full Name</th>
                 <th>Username</th>
                 <th>Phone No.</th>
+                <th>AID</th>
                 <th>Apartment Location</th>
                 <th>Address</th>
                 <th>Actions</th> <!-- New column for actions -->
@@ -101,6 +102,7 @@
                 <td class="hover"><%= apply.createdBy %></td>
                 <td class="hover"><%= apply.username %></td>
                 <td class="hover"><%= apply.phone %></td>
+                <td class="hover"><%= apply.applyAid %></td>
                 <td class="hover"><%= apply.location %></td>
                 <td class="hover"><%= apply.address %></td>
                
@@ -108,7 +110,7 @@
                     <!-- Add icons with links to your delete, view, and update routes -->
                     <a href="/edit-application/<%= apply._id %>"><i class="fas fa-edit text-green-500 cursor-pointer"></i></a>
                     <a href="#" onclick="deleteApplication('<%= apply._id %>')"><i class="fas fa-trash-alt text-red-500 cursor-pointer"></i></a>
-                    <a href="#"><i class="fas fa-eye text-blue-500 cursor-pointer mx-2"></i></a>
+                    <a href="/all-apartments"><i class="fas fa-eye text-blue-500 cursor-pointer mx-2"></i></a>
                 </td>
                  
             </tr>
