--- a/views/include/_all-properties.ejs
+++ b/views/include/_all-properties.ejs
@@ -1,95 +1,86 @@
-<!-- 
-        - #PROPERTY
-      -->
 
-      <section class="property" id="property">
-        <div class="container">
-
-          <p class="section-subtitle">Properties</p>
-
-          <h2 class="h2 section-title">Featured Listings</h2>
-
-          <ul class="property-list has-scrollbar">
-            <% apartment.forEach(apartment => { %>
-            <li>
-              <div class="property-card">
-                <figure class="card-banner">
-                  <!-- Dynamic image source -->
-                  
-                  <a href="#">
-                    <img src="<%= apartment.apartmentsPhoto %>" alt="<%= apartment.title %>" class="w-100">
-                  </a>
-                  <!-- Dynamic badge indicating status (e.g., For Rent, For Sale) -->
-                  <div class="card-badge green"><%= apartment.status %></div>
-                  <div class="banner-actions">
-                    <!-- Button with location information -->
-                    <button class="banner-actions-btn">
-                      <ion-icon name="location"></ion-icon>
-                      <address><%= apartment.location %></address>
-                    </button>
-                    <!-- Button with number of bedrooms -->
-                    <button class="banner-actions-btn">
-                      <ion-icon name="bed-outline"></ion-icon>
-                      <span><%= apartment.bedrooms %></span>
-                    </button>
-                    <!-- Button with number of bathrooms -->
-                    <button class="banner-actions-btn">
-                      <ion-icon name="man-outline"></ion-icon>
-                      <span><%= apartment.bathrooms %></span>
-                    </button>
-                  </div>
-                </figure>
-                <div class="card-content">
-                  <!-- Dynamic price -->
-                  <div class="card-price">
-                    <strong><%= apartment.price %></strong><%= apartment.duration %>
-                  </div>
-                  <!-- Dynamic title -->
-                  <h3 class="h3 card-title">
-                    <a href="#"><%= apartment.title %></a>
-                  </h3>
-                  <!-- Dynamic description -->
-                  <p class="card-text">
-                    <%= apartment.description %>
-                  </p>
-                  <ul class="card-list">
-                    <!-- Placeholder for square footage -->
-                    <li class="card-item">
-                      <strong>Contact site</strong>
-                      <!-- <ion-icon name="square-outline"></ion-icon> -->
-                      <a href="/application-form"><span>Administrator</span></a>
-                    </li>
-                  </ul>
-                </div>
-                <div class="card-footer">
-                  <div class="card-author">
-                    
-                    <div>
-                      <!-- Dynamic user fullname -->
-                      <p class="author-name"> Created by:
-                        <a href=""><%= apartment.createdBy %></a>
-                      </p>
-                      <!-- Dynamic user bio -->
-                      <p class="author-title"></p>
-                    </div>
-                  </div>
-                  <div class="card-footer-actions">
-                    <!-- Action buttons (placeholders) -->
-                    <button class="card-footer-actions-btn">
-                      <ion-icon name="resize-outline"></ion-icon>
-                    </button>
-                    <button class="card-footer-actions-btn">
-                      <ion-icon name="heart-outline"></ion-icon>
-                    </button>
-                    <button class="card-footer-actions-btn">
-                      <ion-icon name="add-circle-outline"></ion-icon>
-                    </button>
-                  </div>
-                </div>
-              </div>
-            </li>
-            <% }) %>
-
+<ul class="property-list has-scrollbar">
+  <% apartment.forEach(apt => { %>
+  <li>
+    <div class="property-card">
+      <figure class="card-banner">
+        <!-- Dynamic image source -->
+        <a href="#">
+          <img src="<%= apt.apartmentsPhoto %>" alt="<%= apt.title %>" class="w-100">
+        </a>
+        <!-- Dynamic badge indicating status (e.g., For Rent, For Sale) -->
+        <div class="card-badge green"><%= apt.status %></div>
+        <div class="banner-actions">
+          <!-- Button with location information -->
+          <button class="banner-actions-btn">
+            <ion-icon name="location"></ion-icon>
+            <address><%= apt.location %></address>
+          </button>
+          <!-- Button with number of bedrooms -->
+          <button class="banner-actions-btn">
+            <ion-icon name="bed-outline"></ion-icon>
+            <span><%= apt.bedrooms %></span>
+          </button>
+          <!-- Button with number of bathrooms -->
+          <button class="banner-actions-btn">
+            <ion-icon name="man-outline"></ion-icon>
+            <span><%= apt.bathrooms %></span>
+          </button>
+        </div>
+      </figure>
+      <div class="card-content">
+        <!-- Dynamic price -->
+        <div class="card-price">
+          <strong><%= 'Le' + apt.price %></strong><%= apt.duration %>
+        </div>
+        <!-- Dynamic title -->
+        <h3 class="h3 card-title">
+          <a href="#"><%= apt.title %></a>
+        </h3>
+        <!-- Dynamic description -->
+        <p class="card-text">
+          <%= apt.description %>
+        </p>
+        <ul class="card-list">
+          <!-- Placeholder for square footage -->
+          <li class="card-item">
+            <strong>Apartment ID (AID): AID<%= apt.aid %></strong>
+            <!-- <ion-icon name="square-outline"></ion-icon> -->
+            <a href="/application-form?aid=<%= apt.aid %>&location=<%= apt.location %>">
+              <span>Contact site: Administrator</span>
+            </a>
+            
+          </li>
+        </ul>
+      </div>
+      <div class="card-footer">
+        <div class="card-author">
+          <div>
+            <!-- Dynamic user fullname -->
+            <p class="author-name"> Created by:
+              <a href=""><%= apt.createdBy %></a>
+            </p>
+            <!-- Dynamic user bio -->
+            <p class="author-title"></p>
+          </div>
+        </div>
+        <div class="card-footer-actions">
+          <!-- Action buttons (placeholders) -->
+          <button class="card-footer-actions-btn">
+            <ion-icon name="resize-outline"></ion-icon>
+          </button>
+          <button class="card-footer-actions-btn">
+            <ion-icon name="heart-outline"></ion-icon>
+          </button>
+          <button class="card-footer-actions-btn">
+            <ion-icon name="add-circle-outline"></ion-icon>
+          </button>
+        </div>
+      </div>
+    </div>
+  </li>
+  <% }) %>
+</ul>
 
             <!-- <li>
               <div class="property-card">
