--- a/views/include/_apply.ejs
+++ b/views/include/_apply.ejs
@@ -39,15 +39,30 @@
             type="text"
             name="location"
             id="location"
-            placeholder="Apartment Location"
+            value="<%= location %>"
             class="formbold-form-input"
-            required
+            readonly
+          />
+        </div>
+      </div>
+
+      <div class="formbold-mb-3 formbold-input-wrapp">
+        <label for="apply-aid" class="formbold-form-label"> Apartment ID (AID): </label>
+        <div>
+          <input
+            type="text"
+            name="applyAid"
+            id="apply-aid"
+            placeholder="Apartment ID"
+            class="formbold-form-input"
+            value="<%= aid %>"
+            readonly
           />
         </div>
       </div>
 
       <div class="formbold-mb-3">
-        <label for="address" class="formbold-form-label"> Address </label>
+        <label for="address" class="formbold-form-label">Current Address </label>
 
         <input
           type="text"
