--- a/views/include/_header-admin.ejs
+++ b/views/include/_header-admin.ejs
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Homeverse - Admin</title>
+  <title>HomeHub - Admin</title>
   <style>
     .header-bottom-actions {
       display: flex;
@@ -122,7 +122,7 @@
       <div class="container">
 
         <a href="#" class="logo">
-          <img src="./images/logo.png" alt="Homeverse logo">
+          <img style="width: 50%; float: left; margin-right: 10px;" src="./images/hub.jpg" alt="Homehub logo">
         </a>
 
         <nav class="navbar" data-navbar>
@@ -130,7 +130,7 @@
           <div class="navbar-top">
 
             <a href="#" class="logo">
-              <img src="./images/logo.png" alt="Homeverse logo">
+              <img src="./images/homehub-logo.jpg" alt="Homehub logo">
             </a>
 
             <button class="nav-close-btn" data-nav-close-btn aria-label="Close Menu">
@@ -147,11 +147,11 @@
               </li>
 
               <li>
-                <a href="/about" class="navbar-link" data-nav-link>About</a>
+                <a href="/admin-about" class="navbar-link" data-nav-link>About</a>
               </li>
 
               <li>
-                <a href="/service" class="navbar-link" data-nav-link>Service</a>
+                <a href="/admin-service" class="navbar-link" data-nav-link>Service</a>
               </li>
 
               <li>
@@ -159,7 +159,7 @@
               </li>
 
               <li>
-                <a href="/blog" class="navbar-link" data-nav-link>Blog</a>
+                <a href="/admin-blog" class="navbar-link" data-nav-link>Blog</a>
               </li>
 
               <li>
