update admin accounts

--- a/views/acc-dashboard.ejs
+++ b/views/acc-dashboard.ejs
@@ -131,7 +131,7 @@
           </div>
 
           <div class="card">
-            <a href="#">
+            <a href="/all-transactions">
             <div class="card-inner"> 
               <h3>TOTAL INCOME</h3>
               <span class="material-icons-outlined">money</span>
@@ -142,9 +142,9 @@
 
         <div class="main-cards">
             <div class="card">
-              <a href="#">
+              <a href="/buyer-percent">
               <div class="card-inner">
-                <h3>BUYER 5%</h3>
+                <h3>BUYER/TENANT 5%</h3>
                 <span class="material-icons-outlined">home</span>
               </div></a>
               <!-- <h1>249</h1> -->
@@ -153,7 +153,7 @@
   
             
             <div class="card">
-              <a href="#">
+              <a href="/owner-percent">
               <div class="card-inner">
                 <h3>OWNER 5%</h3>
                 <span class="material-icons-outlined">supervisor_account</span>
@@ -162,16 +162,16 @@
             </div>
   
             <div class="card">
-              <a href="#">
+              <a href="/all-staffs">
               <div class="card-inner">
-                <h3>TENANTS 5%</h3>
-                <span class="material-icons-outlined">home</span>
+                <h3>STAFFS</h3>
+                <span class="material-icons-outlined">groups</span>
               </div></a>
-              <h1></h1>
+              <h1><%= staffsCount %></h1>
             </div>
   
             <div class="card">
-              <a href="#">
+              <a href="/all-salaries">
               <div class="card-inner"> 
                 <h3>SALARIES</h3>
                 <span class="material-icons-outlined">person</span>
