--- a/views/success/delete-transactions.ejs
+++ b/views/success/delete-transactions.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="./css/success.css">
-    <title>Delete User</title>
+    <title>Delete Transactions</title>
 
     <style>
         body {
@@ -54,8 +54,8 @@
 <body>
     <div class="container">
         <div class="success-message">
-            <h1>User Deleted Successfully!</h1>
-            <p>User details have been deleted successfully.</p>
+            <h1>Transactions Deleted Successfully!</h1>
+            <p>Transactions details have been deleted successfully.</p>
         </div>
         <div class="add-another-reception">
             <a href="#" onclick="goBack()">Go Back</a>
