--- a/views/owner-percent.ejs
+++ b/views/owner-percent.ejs
@@ -116,7 +116,7 @@
                 <td class="hover px-6 py-4 whitespace-nowrap">
                     <!-- Add icons with links to your delete, view, and update routes -->
                     <a href="/edit-transactions/<%= transactions._id %>"><i class="fas fa-edit text-green-500 cursor-pointer"></i></a>
-                    <a href="#" onclick="deleteTransactions('<%= transactions._id %>')"><i class="fas fa-trash-alt text-red-500 cursor-pointer"></i></a>
+                    <a href="#" onclick="deletetransactions('<%= transactions._id %>')"><i class="fas fa-trash-alt text-red-500 cursor-pointer"></i></a>
                     <a href="#"><i class="fas fa-eye text-blue-500 cursor-pointer mx-2"></i></a>
                 </td>
                  
@@ -138,7 +138,7 @@
     </div>
 </body>
 <script>
-    function deleteTransactions(username) {
+    function deleteTransaction(username) {
         if (confirm('Are you sure you want to delete this transactions?')) {
             // Redirect to the delete route with the storage ID
             window.location.href = "/delete-transactions/" + username + "?_method=DELETE";
