--- a/views/staffs-list.ejs
+++ b/views/staffs-list.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>All Expenses</title>
+    <title>All Staffs</title>
   <link rel="stylesheet" href="./css/users.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
@@ -138,38 +138,44 @@
         }
   </style>
 <body>
-    <h2>All Expenses</h2>
+    <h2>All Staffs</h2>
     <div class="table-wrapper">
-        <div class="btn-group me-2">
-            <a href="/expenses-form" class="btn btn-sm btn-outline-secondary">+ New Expenses</a>
-          </div>
+
+        <!-- <div class="btn-group me-2">
+            <a href="/add-staffs-form" class="btn btn-sm btn-outline-secondary">+ New Staff</a>
+          </div> -->
+          <div class="btn-group me-2">
+            <a href="/add-staffs-form" class="btn btn-sm btn-outline-secondary">+ New Staff</a>
+        </div>
+        
+
         <table class="fl-table">
             <thead>
             <tr>
-                <th>Date</th>
-                <th>Purpose</th>
-                <th>Amount</th>
-                <th>Received By</th>
-                <th>Approved By</th>
+                <th>DOE</th>
+                <th>Name</th>
+                <th>Position</th>
+                <th>Phone</th>
+                <th>Email</th>
+                <th>Address</th>
                 <th>Created By</th>
-                <th>Username</th>
                 <th>Actions</th> <!-- New column for actions -->
             </tr>
             </thead>
             <tbody>
-                <% expenses.forEach(expenses => { %>
+                <% staffs.forEach(staffs => { %>
             <tr>
-                <td class="hover"><%= expenses.date %></td>
-                <td class="hover"><%= expenses.purpose %></td>
-                <td class="hover"><%= expenses.amount %></td>
-                <td class="hover"><%= expenses.receivedBy %></td>
-                <td class="hover"><%= expenses.approvedBy %></td>
-                <td class="hover"><%= expenses.createdBy %></td>
-                <td class="hover"><%= expenses.username %></td>
+                <td class="hover"><%= staffs.dateOfEmployment %></td>
+                <td class="hover"><%= staffs.staffName %></td>
+                <td class="hover"><%= staffs.position %></td>
+                <td class="hover"><%= staffs.phone %></td>
+                <td class="hover"><%= staffs.email %></td>
+                <td class="hover"><%= staffs.address %></td>
+                <td class="hover"><%= staffs.createdBy %></td>
                 <td class="hover px-6 py-4 whitespace-nowrap">
                     <!-- Add icons with links to your delete, view, and update routes -->
-                    <a href="/edit-expenses/<%= expenses._id %>"><i class="fas fa-edit text-green-500 cursor-pointer"></i></a>
-                    <a href="#" onclick="deleteExpenses('<%= expenses._id %>')"><i class="fas fa-trash-alt text-red-500 cursor-pointer"></i></a>
+                    <a href="/edit-staffs/<%= staffs._id %>"><i class="fas fa-edit text-green-500 cursor-pointer"></i></a>
+                    <a href="#" onclick="deleteStaffs('<%= staffs._id %>')"><i class="fas fa-trash-alt text-red-500 cursor-pointer"></i></a>
                     <a href="#"><i class="fas fa-eye text-blue-500 cursor-pointer mx-2"></i></a>
                 </td>
                  
@@ -191,10 +197,10 @@
     </div>
 </body>
 <script>
-    function deleteExpense(username) {
+    function deleteStaffs(username) {
         if (confirm('Are you sure you want to delete this expenses?')) {
             // Redirect to the delete route with the storage ID
-            window.location.href = "/delete-expenses/" + username + "?_method=DELETE";
+            window.location.href = "/delete-staffs/" + username + "?_method=DELETE";
         }
     }
    </script>
